# heuristics-classes

./: .gitignore  HMM_Aula_6_Estratégia_Evolutiva.ipynb  LICENSE  README.md  requirements.txt
atividade4/: README.md  main.py  pyproject.toml
atividade_final/: README.md  README_APRESENTACAO.md  RELATORIO.md  REPORT.md  analyze_multiple_runs.py  baseline_mlr.py  baseline_mlr_multiple_runs.py  baseline_results.csv  compare_results.py  convert_json.py  debug_genetic.py  genetic_mlr.py  genetic_mlr_multiple_runs.py  genetic_mlr_simplified.py  main.py  optimize_hyperparams.py  pyproject.toml  requirements.txt  run_all.sh  run_statistical_analysis.py  simple_convert.py  test_encoding.py  test_improved_genetic.py  visual.ipynb  visualize_dataset.py
atividade_final/data/: IDRC_Validation_set_references.xlsx  all_data_matlab.json
atividade_final/data/csv/: all_data_IDRC.csv  all_data_matlab.csv
atividade_final/data/json/: all_data_IDRC.json
atividade_final/data/mat/: convert_csv.py
atividade_final/data/utils/: convert_json.py
atividade_final/results/: baseline_results.csv  best_hyperparameters.json  genetic_results.csv  optuna_study.pkl
atividade_final/results/analysis_plots/: statistical_summary_20250701_175358.csv
atividade_final/results/baseline_plots/: correlation_matrix.csv  feature_importance.csv
atividade_final/results/genetic_plots/: feature_importance.csv
atividade_final/results/multiple_runs/: baseline_mlr_30_runs_20250701_174815.csv  baseline_mlr_30_runs_20250701_174815.json  (+4 more)
atividade_final/src/: logging_utils.py  metrics.py
(+32 files in other folders)
