[project]
name = "atividade4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "mealpy>=3.0.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "rich>=14.0.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
